<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAEFD0"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_in"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/account"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/account"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userid"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwd"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userpasswd"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:ems="15"
                android:hint="@string/over"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp">

            <Button
                android:id="@+id/cler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E1BC52"
                android:text="@string/clear"
                android:textSize="20sp" />

            <Button
                android:id="@+id/comfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:background="#E1BC52"
                android:text="@string/define"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>