<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt123"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#FAEFD0"
    android:orientation="vertical"
    tools:context=".customer">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back1"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#BA8537"
                    android:onClick="backTo"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/txv"
                    android:layout_width="297dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center|center_vertical"
                    android:text="@string/Title"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/result"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="#BA8537"
                    android:onClick="order"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/check_mark" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:text="@string/your_order"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/choco_cake" />

                <TextView
                    android:id="@+id/txv1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/cheese_cake" />

                <TextView
                    android:id="@+id/txv2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/original_cake" />

                <TextView
                    android:id="@+id/txv3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/cake_choco" />

                <TextView
                    android:id="@+id/txv4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bask" />

                <TextView
                    android:id="@+id/txv5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/lemon_tower" />

                <TextView
                    android:id="@+id/txv6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/choco_tower" />

                <TextView
                    android:id="@+id/txv7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/sendonohe" />

                <TextView
                    android:id="@+id/txv8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/cinnamon_rolls" />

                <TextView
                    android:id="@+id/txv9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txv10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/calligraffitti"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnToCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:background="#E1BC52"
                    android:onClick="backTo"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/btnToSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:background="#E1BC52"
                    android:onClick="order"
                    android:text="@string/send" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</LinearLayout>

















